# trajectory_generation_uav

./: .gitignore
rl_aerial_manipulation/: CMakeLists.txt  package.xml
rl_aerial_manipulation/misc/: classic_control_UAM.ipynb  classic_control_quadrotor.ipynb  classic_control_quadrotor_obs copy.ipynb
rl_aerial_manipulation/rl_aerial_manipulation/: pytorch_model.py
rl_aerial_manipulation/rl_aerial_manipulation/agent/: DDPG.py  SAC.py  SoftQ.py  TD3.py
rl_aerial_manipulation/rl_aerial_manipulation/environment/GazeboEnv/Quadrotor/: BaseGazeboUAVEnv.py  BaseGazeboUAVObsEnv.py  BaseGazeboUAVVelEnv.py  BaseGazeboUAVVelObsEnv.py  BaseGazeboUAVVelObsEnvPCD.py  BaseGazeboUAVVelObsEnvSimp.py
rl_aerial_manipulation/rl_aerial_manipulation/environment/GazeboEnv/Quadrotor/utils/: CltSrvClasses.py
rl_aerial_manipulation/scripts/: compile_result.py  main.py  process_pcd.py  test_env.py  test_uam_agent.py
rl_aerial_manipulation/test/: test_env.py  test_rl.py  test_torch_layer.py
simulator/: CMakeLists.txt  package.xml
simulator/launch/: gazebo.launch.py  launcher.launch.py  rviz.launch.py  uav.launch.py  uav_rviz.launch.py
simulator/models/parrot_bebop/: model.config  model_lidar.sdf  parrot_bebop.urdf.xacro
simulator/rviz/: robot.rviz
simulator/scripts/: ros_kinematic_uav.cpp  ros_kinematic_vel_uav.cpp
simulator/urdf/: model_lidar.sdf
simulator/world/: uav_two_obs.world
simulator/worlds/: uav_rrt_world.world  uav_two_obs.world
traject_optim/: CMakeLists.txt  package.xml
traject_optim/config/: env1.yaml
traject_optim/src/: main.py  test_optimization_method.py  test_path_planning.py  test_trajectory_planning.py
traject_optim/traject_optim/planning/: Nodes.py  RRTStar.py  Visualize.py  all_pathplanning.py  graph.py  map.py
traject_optim/traject_optim/traj_gen/: min_accl.py  min_snap.py  obstacle_avoidance.py
uam_msgs/: CMakeLists.txt  package.xml
uam_msgs/msg/: Dynamics.msg  States.msg
uam_msgs/srv/: RequestUavPose.srv  RequestUavVel.srv  ResponseUavPose.srv  Uam.srv
